Add sfinfo for SCL repoxplorer and deps
Change-Id: Id858ffe525ebc94b6f5d5eb86c428833d9de9c2d

--- a/sf-master.yaml
+++ b/sf-master.yaml
@@ -964,6 +964,22 @@ packages:
     source: external
     scl: rh-python35
 
+  # repoXplorer scl
+  - name: scl/repoxplorer
+    scl: rh-python35
+  - name: scl/python-pecan
+    source: external
+    scl: rh-python35
+  - name: scl/python-logutils
+    source: external
+    scl: rh-python35
+  - name: scl/python-elasticsearch
+    source: external
+    scl: rh-python35
+  - name: scl/python-gunicorn
+    source: external
+    scl: rh-python35
+
   - name: software-factory/python-pluggy
     source: external
 
