Add webtest and beautifulsoup to sf scl distro jobs
Change-Id: I8a17e321c9f2539aee291c90a8efebe052dcde0c

--- a/sf-master.yaml
+++ b/sf-master.yaml
@@ -979,6 +979,12 @@ packages:
   - name: scl/python-gunicorn
     source: external
     scl: rh-python35
+  - name: scl/python-webtest
+    source: external
+    scl: rh-python35
+  - name: scl/python-beautifulsoup
+    source: external
+    scl: rh-python35
 
   - name: software-factory/python-pluggy
     source: external
