Add distroinfo in sfinfo
Change-Id: Id09ef21d3b885ffebcde52f4c9580364092af9c9

--- a/sf-master.yaml
+++ b/sf-master.yaml
@@ -248,6 +248,9 @@ packages:
   - name: scl/dlrnapi-client
     source: external
     scl: rh-python35
+  - name: scl/python-distroinfo
+    source: external
+    scl: rh-python35
 
   # Codesearch
   - name: software-factory/hound
