--- a/zuul.d/projects-scl.yaml
+++ b/zuul.d/projects-scl.yaml
@@ -172,6 +172,10 @@
     templates:
       - sf-packaging-jobs
 - project:
+    name: scl/python-distroinfo-distgit
+    templates:
+      - sf-packaging-jobs
+- project:
     name: scl/dlrnapi-client-distgit
     templates:
       - sf-packaging-jobs
