--- a/sf-master.yaml
+++ b/sf-master.yaml
@@ -614,6 +614,10 @@ packages:
     source: external
     scl: rh-python35
 
+  - name: scl/python-jsonpath-rw
+    source: external
+    scl: rh-python35
+
   - name: scl/python-iso8601
     source: external
     scl: rh-python35
