Add boto3 to 3.2 release
Change-Id: I049324c0f1cf45e36cf968cf90192cee6944a080

--- a/sf-3.2.yaml
+++ b/sf-3.2.yaml
@@ -271,6 +271,18 @@ packages:
     source: external
     scl: rh-python35
 
+  - name: scl/python-boto3
+    source: external
+    scl: rh-python35
+
+  - name: scl/python-botocore
+    source: external
+    scl: rh-python35
+
+  - name: scl/python-s3transfer
+    source: external
+    scl: rh-python35
+
   - name: scl/python-openshift
     source: external
     scl: rh-python35
