Add zuul executor ansible version bundles
Change-Id: I46190555ef322ffd4e98ea5f7baa16e7ad37e665

--- a/sf-master.yaml
+++ b/sf-master.yaml
@@ -79,6 +79,18 @@ packages:
     source: external
     scl: rh-python35
 
+  - name: scl/zuul-executor-ansible-25
+    source: external
+    scl: rh-python35
+
+  - name: scl/zuul-executor-ansible-26
+    source: external
+    scl: rh-python35
+
+  - name: scl/zuul-executor-ansible-27
+    source: external
+    scl: rh-python35
+
   - name: software-factory/re2
     source: external
 
