--- a/sf-master.yaml
+++ b/sf-master.yaml
@@ -86,10 +86,14 @@ packages:
   - name: scl/zuul-executor-ansible-26
     source: external
     scl: rh-python35
+    upstream: https://github.com/ansible/ansible/
+    constrain: "<2.7"
 
   - name: scl/zuul-executor-ansible-27
     source: external
     scl: rh-python35
+    upstream: https://github.com/ansible/ansible/
+    constrain: "<2.8"
 
   - name: software-factory/re2
     source: external
