Configure CI for scl/python-cauth-distgit
Change-Id: Iedb92bddb3de196f793f8033c46b91a03d497311
Depends-On: If10d378cf4e61a6831851151de4a1e381eae6941

--- a/sf-master.yaml
+++ b/sf-master.yaml
@@ -1009,6 +1009,11 @@ packages:
     source: external
     scl: rh-python35
 
+  # Software Factory Core Libraries
+  - name: scl/python-cauth
+    source: external
+    scl: rh-python35
+
   - name: software-factory/python-pluggy
     source: external
 
