--- a/zuul.d/projects.yaml
+++ b/zuul.d/projects.yaml
@@ -131,16 +131,25 @@
         - sf-rpm-build:
             required-projects:
               - software-factory/cauth-distgit
+        - sf-rpm-build-scl:
+            required-projects:
+              - scl/python-cauth-distgit
     gate:
       jobs:
         - sf-rpm-build:
             required-projects:
               - software-factory/cauth-distgit
+        - sf-rpm-build-scl:
+            required-projects:
+              - scl/python-cauth-distgit
     release:
       jobs:
         - sf-rpm-publish:
             required-projects:
               - software-factory/cauth-distgit
+        - sf-rpm-publish-scl:
+            required-projects:
+              - scl/python-cauth-distgit
 
 - project:
     name: software-factory/python-sfmanager
