Configure CI for scl/python-cauth-distgit
Change-Id: Iedb92bddb3de196f793f8033c46b91a03d497311
Depends-On: If10d378cf4e61a6831851151de4a1e381eae6941

--- a/zuul.d/projects.yaml
+++ b/zuul.d/projects.yaml
@@ -131,16 +131,22 @@
         - sf-rpm-build:
             required-projects:
               - software-factory/cauth-distgit
+        - sf-rpm-build-scl:
+              - scl/python-cauth-distgit
     gate:
       jobs:
         - sf-rpm-build:
             required-projects:
               - software-factory/cauth-distgit
+        - sf-rpm-build-scl:
+              - scl/python-cauth-distgit
     release:
       jobs:
         - sf-rpm-publish:
             required-projects:
               - software-factory/cauth-distgit
+        - sf-rpm-publish-scl:
+              - scl/python-cauth-distgit
 
 - project:
     name: software-factory/python-sfmanager
