Configure CI for scl/python-cauth-distgit
Change-Id: Iedb92bddb3de196f793f8033c46b91a03d497311
Depends-On: If10d378cf4e61a6831851151de4a1e381eae6941

--- a/zuul.d/projects-scl.yaml
+++ b/zuul.d/projects-scl.yaml
@@ -1031,3 +1031,24 @@
     name: scl/repoxplorer-distgit
     templates:
       - sf-packaging-jobs
+
+
+- project:
+    name: scl/python-cauth-distgit
+    templates:
+      - sf-jobs-light
+    check:
+      jobs:
+        - sf-rpm-build:
+            required-projects:
+              - software-factory/cauth
+    gate:
+      jobs:
+        - sf-rpm-build:
+            required-projects:
+              - software-factory/cauth
+    release:
+      jobs:
+        - sf-rpm-publish:
+            required-projects:
+              - software-factory/cauth
