Attach experimental job to the python-openshift project
Change-Id: I5a0e2365070ab19e293e52383fbb46e6ff5cb16b

--- a/zuul.d/projects-scl.yaml
+++ b/zuul.d/projects-scl.yaml
@@ -87,6 +87,12 @@
     name: scl/python-openshift-distgit
     templates:
       - sf-packaging-jobs
+    experimental:
+      jobs:
+        - sf-rpm-build
+        - sf-ci-openshift-integration:
+            dependencies:
+              - sf-rpm-build
 - project:
     name: scl/python-dictdiffer-distgit
     templates:
