Add zuul-executor-ansible-28 package
Change-Id: I37989e63a5828315e44f5b1c80aeb11893f843f0

--- a/sf-master.yaml
+++ b/sf-master.yaml
@@ -91,6 +91,10 @@ packages:
     source: external
     scl: rh-python35
 
+  - name: scl/zuul-executor-ansible-28
+    source: external
+    scl: rh-python35
+
   - name: software-factory/re2
     source: external
 
