Add python-adal package
This is a new requirements for kubernetes client.

Change-Id: I4c75fe4dff7aa6a4f582130410e9b87f050ffdee

--- a/sf-master.yaml
+++ b/sf-master.yaml
@@ -370,6 +370,10 @@ packages:
     source: external
     scl: rh-python35
 
+  - name: scl/python-adal
+    source: external
+    scl: rh-python35
+
   - name: scl/python-oauth2client
     source: external
     scl: rh-python35
