Add protobuf-c and c-ares package
These are needed for mosquitto and umurmur.

Change-Id: I6d9f95d79e4a1991906140e920577eb5d20770ad

--- a/zuul.d/projects-distgit.yaml
+++ b/zuul.d/projects-distgit.yaml
@@ -194,6 +194,11 @@
     templates:
       - sf-jobs-light
 
+- project:
+    name: software-factory/c-ares-distgit
+    templates:
+      - sf-jobs-light
+
 
 - project:
     name: software-factory/os-loganalyze-distgit
@@ -627,6 +632,11 @@
 
 - project:
     name: software-factory/umurmur-distgit
+    templates:
+      - sf-jobs-light
+
+- project:
+    name: software-factory/protobuf-c-distgit:
     templates:
       - sf-jobs-light
 
