--- a/sf-master.yaml
+++ b/sf-master.yaml
@@ -226,6 +226,9 @@ packages:
   - name: software-factory/mosquitto
     source: external
 
+  - name: software-factory/c-ares
+    source: external
+
   - name: software-factory/germqtt
     source: external
 
@@ -287,6 +290,9 @@ packages:
     source: external
 
   - name: software-factory/umurmur
+    source: external
+
+  - name: software-factory/protobuf-c
     source: external
 
   - name: software-factory/mirror2swift
