zuul: add tenants job
Add sf-tenants in check pipelines.

Change-Id: Id95eb409f6a2d38f560437b31c373f61394ec826

--- a/zuul.d/templates.yaml
+++ b/zuul.d/templates.yaml
@@ -16,6 +16,9 @@
         - sf-ci-upgrade-allinone:
             dependencies:
               - sf-rpm-build
+        - sf-tenants:
+            dependencies:
+              - sf-rpm-build
     gate:
       queue: sf
       jobs:
@@ -61,6 +64,9 @@
             dependencies:
               - sf-rpm-build
         - sf-ci-upgrade-allinone:
+            dependencies:
+              - sf-rpm-build
+        - sf-tenants:
             dependencies:
               - sf-rpm-build
     gate:
