Switch managesf to scl mock
Change-Id: I131e4fd0d6d260a936598db9a6917f912892357f

--- a/sf-master.yaml
+++ b/sf-master.yaml
@@ -30,6 +30,7 @@ packages:
   - name: software-factory/managesf
     source: internal
     spec: included
+    scl: rh-python35
 
   - name: software-factory/cauth
     source: internal
