Add sphinxcontrib openapi for zuul documentation
Depends-On: https://softwarefactory-project.io/r/16031
Change-Id: I5c23038ba6d3c18200a7bc24ef1c318b628cd7e2

--- a/sf-master.yaml
+++ b/sf-master.yaml
@@ -971,6 +971,14 @@ packages:
     source: external
     scl: rh-python35
 
+  - name: scl/python-sphinxcontrib-httpdomain
+    source: external
+    scl: rh-python35
+
+  - name: scl/python-sphinxcontrib-openapi
+    source: external
+    scl: rh-python35
+
   - name: scl/python-sphinx
     source: external
     scl: rh-python35
