sf-3.3: add zuul-executor-ansible-28
This is now required by zuul-3.10.1

Change-Id: Ie76f2e192e1fb4ec8d0d124c578f11e16028eb63

--- a/sf-3.3.yaml
+++ b/sf-3.3.yaml
@@ -91,6 +91,10 @@ packages:
     source: external
     scl: rh-python35
 
+  - name: scl/zuul-executor-ansible-28
+    source: external
+    scl: rh-python35
+
   - name: software-factory/re2
     source: external
 
@@ -981,6 +985,9 @@ packages:
     source: external
     scl: rh-python35
   - name: scl/python-sphinxcontrib-httpdomain
+    source: external
+    scl: rh-python35
+  - name: scl/python-sphinxcontrib-openapi
     source: external
     scl: rh-python35
   - name: scl/python-sphinx-autodoc-typehints
