--- a/sf-master.yaml
+++ b/sf-master.yaml
@@ -221,6 +221,10 @@ packages:
     spec: included
     scl: rh-python35
 
+  - name: scl/k1s-distgit
+    source: external
+    scl: rh-python35
+
   # Nodepool
   - name: scl/diskimage-builder
     source: external
