Fix typo in k1s package
Change-Id: I4cd614d07827f841f8d516b3b8ef611f19deeac9

--- a/sf-master.yaml
+++ b/sf-master.yaml
@@ -221,7 +221,7 @@ packages:
     spec: included
     scl: rh-python35
 
-  - name: scl/k1s-distgit
+  - name: scl/k1s
     source: external
     scl: rh-python35
 
