--- a/zuul.d/projects-distgit.yaml
+++ b/zuul.d/projects-distgit.yaml
@@ -2,13 +2,13 @@
 - project:
     name: ^software-factory/.*-distgit$
     templates:
-      - imported-sf-ci-packages-publish
+      - sf-ci-packages-publish
 
 # Cauth and pysflib rpmbuild job needs special required-projects
 - project:
     name: software-factory/cauth-distgit
     templates:
-      - imported-sf-ci-jobs-light
+      - sf-ci-jobs-light
     check:
       jobs:
         - sf-rpm-build:
@@ -28,7 +28,7 @@
 - project:
     name: software-factory/pysflib-distgit
     templates:
-      - imported-sf-ci-jobs-light
+      - sf-ci-jobs-light
     check:
       jobs:
         - sf-rpm-build:
@@ -48,619 +48,619 @@
 - project:
     name: software-factory/hound-distgit
     templates:
-      - imported-sf-ci-no-jobs
+      - sf-ci-no-jobs
 
 - project:
     name: software-factory/re2-distgit
     templates:
-      - imported-sf-ci-no-jobs
+      - sf-ci-no-jobs
 
 - project:
     name: software-factory/libgit2-distgit
     templates:
-      - imported-sf-ci-no-jobs
+      - sf-ci-no-jobs
 
 - project:
     name: software-factory/gitolite3-distgit
     templates:
-      - imported-sf-ci-no-jobs
+      - sf-ci-no-jobs
 
 - project:
     name: software-factory/perl-generators-distgit
     templates:
-      - imported-sf-ci-no-jobs
+      - sf-ci-no-jobs
 
 - project:
     name: software-factory/perl-Redis-distgit
     templates:
-      - imported-sf-ci-no-jobs
+      - sf-ci-no-jobs
 
 - project:
     name: software-factory/perl-IO-Socket-Timeout-distgit
     templates:
-      - imported-sf-ci-no-jobs
+      - sf-ci-no-jobs
 
 - project:
     name: software-factory/perl-PerlIO-via-Timeout-distgit
     templates:
-      - imported-sf-ci-no-jobs
+      - sf-ci-no-jobs
 
 - project:
     name: software-factory/perl-Test-TCP-distgit
     templates:
-      - imported-sf-ci-no-jobs
+      - sf-ci-no-jobs
 
 - project:
     name: software-factory/perl-Test-SharedFork-distgit
     templates:
-      - imported-sf-ci-no-jobs
+      - sf-ci-no-jobs
 
 - project:
     name: software-factory/cgit-distgit
     templates:
-      - imported-sf-ci-jobs-light
+      - sf-ci-jobs-light
 
 - project:
     name: software-factory/acme-tiny-distgit
     templates:
-      - imported-sf-ci-no-jobs
+      - sf-ci-no-jobs
 
 - project:
     name: software-factory/ansible-lint-distgit
     templates:
-      - imported-sf-ci-jobs-light
+      - sf-ci-jobs-light
 
 - project:
     name: software-factory/ara-distgit
     templates:
-      - imported-sf-ci-jobs-light
+      - sf-ci-jobs-light
 
 - project:
     name: software-factory/bashate-distgit
     templates:
-      - imported-sf-ci-jobs-light
+      - sf-ci-jobs-light
 
 - project:
     name: software-factory/bubblewrap-distgit
     templates:
-      - imported-sf-ci-jobs-light
+      - sf-ci-jobs-light
 
 - project:
     name: software-factory/buck-distgit
     templates:
-      - imported-sf-ci-no-jobs
+      - sf-ci-no-jobs
 
 - project:
     name: software-factory/doc8-distgit
     templates:
-      - imported-sf-ci-no-jobs
+      - sf-ci-no-jobs
 
 - project:
     name: software-factory/elasticsearch-curator-distgit
     templates:
-      - imported-sf-ci-jobs-light
+      - sf-ci-jobs-light
 
 - project:
     name: software-factory/etherpad-distgit
     templates:
-      - imported-sf-ci-jobs-light
+      - sf-ci-jobs-light
 
 - project:
     name: software-factory/germqtt-distgit
     templates:
-      - imported-sf-ci-jobs-light
+      - sf-ci-jobs-light
 
 - project:
     name: software-factory/gerrit-distgit
     templates:
-      - imported-sf-ci-jobs-light
+      - sf-ci-jobs-light
 
 - project:
     name: software-factory/gerritbot-distgit
     templates:
-      - imported-sf-ci-jobs-light
+      - sf-ci-jobs-light
 
 - project:
     name: software-factory/git-review-distgit
     templates:
-      - imported-sf-ci-jobs-light
+      - sf-ci-jobs-light
 
 - project:
     name: software-factory/gitweb-theme-kogakure-distgit
     templates:
-      - imported-sf-ci-jobs-light
+      - sf-ci-jobs-light
 
 - project:
     name: software-factory/grafyaml-distgit
     templates:
-      - imported-sf-ci-jobs-light
+      - sf-ci-jobs-light
 
 - project:
     name: software-factory/haveged-distgit
     templates:
-      - imported-sf-ci-jobs-light
+      - sf-ci-jobs-light
 
 - project:
     name: software-factory/lecm-distgit
     templates:
-      - imported-sf-ci-jobs-light
+      - sf-ci-jobs-light
 
 - project:
     name: software-factory/libtomcrypt-distgit
     templates:
-      - imported-sf-ci-jobs-light
+      - sf-ci-jobs-light
 
 - project:
     name: software-factory/libtommath-distgit
     templates:
-      - imported-sf-ci-jobs-light
+      - sf-ci-jobs-light
 
 - project:
     name: software-factory/libwebsockets-distgit
     templates:
-      - imported-sf-ci-jobs-light
+      - sf-ci-jobs-light
 
 - project:
     name: software-factory/lodgeit-distgit
     templates:
-      - imported-sf-ci-jobs-light
+      - sf-ci-jobs-light
 
 - project:
     name: software-factory/mirror2swift-distgit
     templates:
-      - imported-sf-ci-jobs-light
+      - sf-ci-jobs-light
 
 - project:
     name: software-factory/mod_auth_pubtkt-distgit
     templates:
-      - imported-sf-ci-jobs-light
+      - sf-ci-jobs-light
 
 - project:
     name: software-factory/monit-distgit
     templates:
-      - imported-sf-ci-jobs-light
+      - sf-ci-jobs-light
 
 - project:
     name: software-factory/mosquitto-distgit
     templates:
-      - imported-sf-ci-jobs-light
+      - sf-ci-jobs-light
 
 - project:
     name: software-factory/c-ares-distgit
     templates:
-      - imported-sf-ci-jobs-light
+      - sf-ci-jobs-light
 
 - project:
     name: software-factory/os-loganalyze-distgit
     templates:
-      - imported-sf-ci-jobs-light
+      - sf-ci-jobs-light
 
 - project:
     name: software-factory/python-XStatic-Bootstrap-SCSS-distgit
     templates:
-      - imported-sf-ci-jobs-light
+      - sf-ci-jobs-light
 
 - project:
     name: software-factory/python-XStatic-DataTables-distgit
     templates:
-      - imported-sf-ci-jobs-light
+      - sf-ci-jobs-light
 
 - project:
     name: software-factory/python-XStatic-Patternfly-Bootstrap-Treeview-distgit
     templates:
-      - imported-sf-ci-jobs-light
+      - sf-ci-jobs-light
 
 - project:
     name: software-factory/python-XStatic-Patternfly-distgit
     templates:
-      - imported-sf-ci-jobs-light
+      - sf-ci-jobs-light
 
 - project:
     name: software-factory/python-appdirs-distgit
     templates:
-      - imported-sf-ci-jobs-light
+      - sf-ci-jobs-light
 
 - project:
     name: software-factory/python-args-distgit
     templates:
-      - imported-sf-ci-jobs-light
+      - sf-ci-jobs-light
 
 - project:
     name: software-factory/python-backports-functools-lru-cache-distgit
     templates:
-      - imported-sf-ci-jobs-light
+      - sf-ci-jobs-light
 
 - project:
     name: software-factory/python-basicauth-distgit
     templates:
-      - imported-sf-ci-jobs-light
+      - sf-ci-jobs-light
 
 - project:
     name: software-factory/keycloak-distgit
     templates:
-      - imported-sf-ci-jobs-light
+      - sf-ci-jobs-light
 
 - project:
     name: software-factory/python-clint-distgit
     templates:
-      - imported-sf-ci-jobs-light
+      - sf-ci-jobs-light
 
 - project:
     name: software-factory/python-colorama-distgit
     templates:
-      - imported-sf-ci-jobs-light
+      - sf-ci-jobs-light
 
 - project:
     name: software-factory/python-cookies-distgit
     templates:
-      - imported-sf-ci-jobs-light
+      - sf-ci-jobs-light
 
 - project:
     name: software-factory/python-cryptodomex-distgit
     templates:
-      - imported-sf-ci-jobs-light
+      - sf-ci-jobs-light
 
 - project:
     name: software-factory/python-decorator-distgit
     templates:
-      - imported-sf-ci-jobs-light
+      - sf-ci-jobs-light
 
 - project:
     name: software-factory/python-deepdiff-distgit
     templates:
-      - imported-sf-ci-jobs-light
+      - sf-ci-jobs-light
 
 - project:
     name: software-factory/python-email-distgit
     templates:
-      - imported-sf-ci-jobs-light
+      - sf-ci-jobs-light
 
 - project:
     name: software-factory/python-feedparser-distgit
     templates:
-      - imported-sf-ci-jobs-light
+      - sf-ci-jobs-light
 
 - project:
     name: software-factory/python-flask-cache-distgit
     templates:
-      - imported-sf-ci-jobs-light
+      - sf-ci-jobs-light
 
 - project:
     name: software-factory/python-flask-frozen-distgit
     templates:
-      - imported-sf-ci-jobs-light
+      - sf-ci-jobs-light
 
 - project:
     name: software-factory/python-flask-migrate-distgit
     templates:
-      - imported-sf-ci-jobs-light
+      - sf-ci-jobs-light
 
 - project:
     name: software-factory/python-flask-script-distgit
     templates:
-      - imported-sf-ci-jobs-light
+      - sf-ci-jobs-light
 
 - project:
     name: software-factory/python-flask-sqlalchemy-distgit
     templates:
-      - imported-sf-ci-jobs-light
+      - sf-ci-jobs-light
 
 - project:
     name: software-factory/python-funcparserlib-distgit
     templates:
-      - imported-sf-ci-jobs-light
+      - sf-ci-jobs-light
 
 - project:
     name: software-factory/python-future-distgit
     templates:
-      - imported-sf-ci-jobs-light
+      - sf-ci-jobs-light
 
 - project:
     name: software-factory/python-gear-distgit
     templates:
-      - imported-sf-ci-jobs-light
+      - sf-ci-jobs-light
 
 - project:
     name: software-factory/python-gerritlib-distgit
     templates:
-      - imported-sf-ci-jobs-light
+      - sf-ci-jobs-light
 
 - project:
     name: software-factory/python-glob2-distgit
     templates:
-      - imported-sf-ci-jobs-light
+      - sf-ci-jobs-light
 
 - project:
     name: software-factory/python-htpasswd-distgit
     templates:
-      - imported-sf-ci-jobs-light
+      - sf-ci-jobs-light
 
 - project:
     name: software-factory/python-httmock-distgit
     templates:
-      - imported-sf-ci-jobs-light
+      - sf-ci-jobs-light
 
 - project:
     name: software-factory/python-httpretty-distgit
     templates:
-      - imported-sf-ci-jobs-light
+      - sf-ci-jobs-light
 
 - project:
     name: software-factory/python-inflect-distgit
     templates:
-      - imported-sf-ci-jobs-light
+      - sf-ci-jobs-light
 
 - project:
     name: software-factory/python-irc-distgit
     templates:
-      - imported-sf-ci-jobs-light
+      - sf-ci-jobs-light
 
 - project:
     name: software-factory/python-jaraco-classes-distgit
     templates:
-      - imported-sf-ci-jobs-light
+      - sf-ci-jobs-light
 
 - project:
     name: software-factory/python-jaraco-collections-distgit
     templates:
-      - imported-sf-ci-jobs-light
+      - sf-ci-jobs-light
 
 - project:
     name: software-factory/python-jaraco-functools-distgit
     templates:
-      - imported-sf-ci-jobs-light
+      - sf-ci-jobs-light
 
 - project:
     name: software-factory/python-jaraco-itertools-distgit
     templates:
-      - imported-sf-ci-jobs-light
+      - sf-ci-jobs-light
 
 - project:
     name: software-factory/python-jaraco-logging-distgit
     templates:
-      - imported-sf-ci-jobs-light
+      - sf-ci-jobs-light
 
 - project:
     name: software-factory/python-jaraco-stream-distgit
     templates:
-      - imported-sf-ci-jobs-light
+      - sf-ci-jobs-light
 
 - project:
     name: software-factory/python-jaraco-text-distgit
     templates:
-      - imported-sf-ci-jobs-light
+      - sf-ci-jobs-light
 
 - project:
     name: software-factory/python-jenkins-distgit
     templates:
-      - imported-sf-ci-jobs-light
+      - sf-ci-jobs-light
 
 - project:
     name: software-factory/python-jenkins-job-builder-distgit
     templates:
-      - imported-sf-ci-jobs-light
+      - sf-ci-jobs-light
 
 - project:
     name: software-factory/python-jinja2-distgit
     templates:
-      - imported-sf-ci-jobs-light
+      - sf-ci-jobs-light
 
 - project:
     name: software-factory/python-junit_xml-distgit
     templates:
-      - imported-sf-ci-jobs-light
+      - sf-ci-jobs-light
 
 - project:
     name: software-factory/python-jwkest-distgit
     templates:
-      - imported-sf-ci-jobs-light
+      - sf-ci-jobs-light
 
 - project:
     name: software-factory/python-log2gearman-distgit
     templates:
-      - imported-sf-ci-jobs-light
+      - sf-ci-jobs-light
 
 - project:
     name: software-factory/python-markupsafe-distgit
     templates:
-      - imported-sf-ci-jobs-light
+      - sf-ci-jobs-light
 
 - project:
     name: software-factory/python-mockldap-distgit
     templates:
-      - imported-sf-ci-jobs-light
+      - sf-ci-jobs-light
 
 - project:
     name: software-factory/python-more-itertools-distgit
     templates:
-      - imported-sf-ci-jobs-light
+      - sf-ci-jobs-light
 
 - project:
     name: software-factory/python-nose-htmloutput-distgit
     templates:
-      - imported-sf-ci-jobs-light
+      - sf-ci-jobs-light
 
 - project:
     name: software-factory/python-nose-timer-distgit
     templates:
-      - imported-sf-ci-jobs-light
+      - sf-ci-jobs-light
 
 - project:
     name: software-factory/python-oic-distgit
     templates:
-      - imported-sf-ci-jobs-light
+      - sf-ci-jobs-light
 
 - project:
     name: software-factory/python-openid-distgit
     templates:
-      - imported-sf-ci-jobs-light
+      - sf-ci-jobs-light
 
 - project:
     name: software-factory/python-orderedmultidict-distgit
     templates:
-      - imported-sf-ci-jobs-light
+      - sf-ci-jobs-light
 
 - project:
     name: software-factory/python-paho-mqtt-distgit
     templates:
-      - imported-sf-ci-jobs-light
+      - sf-ci-jobs-light
 
 - project:
     name: software-factory/python-pelican-distgit
     templates:
-      - imported-sf-ci-jobs-light
+      - sf-ci-jobs-light
 
 - project:
     name: software-factory/python-pkginfo-distgit
     templates:
-      - imported-sf-ci-no-jobs
+      - sf-ci-no-jobs
 
 - project:
     name: software-factory/python-pluggy-distgit
     templates:
-      - imported-sf-ci-jobs-light
+      - sf-ci-jobs-light
 
 - project:
     name: software-factory/python-pyfakefs-distgit
     templates:
-      - imported-sf-ci-jobs-light
+      - sf-ci-jobs-light
 
 - project:
     name: software-factory/python-pygerrit-distgit
     templates:
-      - imported-sf-ci-jobs-light
+      - sf-ci-jobs-light
 
 - project:
     name: software-factory/python-redmine-distgit
     templates:
-      - imported-sf-ci-jobs-light
+      - sf-ci-jobs-light
 
 - project:
     name: software-factory/python-requests-toolbelt-distgit
     templates:
-      - imported-sf-ci-no-jobs
+      - sf-ci-no-jobs
 
 - project:
     name: software-factory/python-responses-distgit
     templates:
-      - imported-sf-ci-jobs-light
+      - sf-ci-jobs-light
 
 - project:
     name: software-factory/python-restructuredtext-lint-distgit
     templates:
-      - imported-sf-ci-no-jobs
+      - sf-ci-no-jobs
 
 - project:
     name: software-factory/python-slugify-distgit
     templates:
-      - imported-sf-ci-jobs-light
+      - sf-ci-jobs-light
 
 - project:
     name: software-factory/python-sqlalchemy-fulltext-search-distgit
     templates:
-      - imported-sf-ci-jobs-light
+      - sf-ci-jobs-light
 
 - project:
     name: software-factory/python-storyboardclient-distgit
     templates:
-      - imported-sf-ci-jobs-light
+      - sf-ci-jobs-light
 
 - project:
     name: software-factory/python-sure-distgit
     templates:
-      - imported-sf-ci-jobs-light
+      - sf-ci-jobs-light
 
 - project:
     name: software-factory/python-taiga-distgit
     templates:
-      - imported-sf-ci-no-jobs
+      - sf-ci-no-jobs
 
 - project:
     name: software-factory/python-tempora-distgit
     templates:
-      - imported-sf-ci-jobs-light
+      - sf-ci-jobs-light
 
 - project:
     name: software-factory/python-testfixtures-distgit
     templates:
-      - imported-sf-ci-jobs-light
+      - sf-ci-jobs-light
 
 - project:
     name: software-factory/python-testinfra-distgit
     templates:
-      - imported-sf-ci-jobs-light
+      - sf-ci-jobs-light
 
 - project:
     name: software-factory/python-tox-distgit
     templates:
-      - imported-sf-ci-jobs-light
+      - sf-ci-jobs-light
 
 - project:
     name: software-factory/python-twine-distgit
     templates:
-      - imported-sf-ci-no-jobs
+      - sf-ci-no-jobs
 
 - project:
     name: software-factory/python-tqdm-distgit
     templates:
-      - imported-sf-ci-no-jobs
+      - sf-ci-no-jobs
 
 - project:
     name: software-factory/python-unidecode-distgit
     templates:
-      - imported-sf-ci-jobs-light
+      - sf-ci-jobs-light
 
 - project:
     name: software-factory/python-virtualenv-distgit
     templates:
-      - imported-sf-ci-jobs-light
+      - sf-ci-jobs-light
 
 - project:
     name: software-factory/python-wsgiref-distgit
     templates:
-      - imported-sf-ci-jobs-light
+      - sf-ci-jobs-light
 
 - project:
     name: software-factory/repoxplorer-distgit
     templates:
-      - imported-sf-ci-jobs-light
+      - sf-ci-jobs-light
 
 - project:
     name: software-factory/sf-web-assets-distgit
     templates:
-      - imported-sf-ci-no-jobs
+      - sf-ci-no-jobs
 
 - project:
     name: software-factory/storyboard-distgit
     templates:
-      - imported-sf-ci-jobs-light
+      - sf-ci-jobs-light
 
 - project:
     name: software-factory/storyboard-webclient-distgit
     templates:
-      - imported-sf-ci-jobs-light
+      - sf-ci-jobs-light
 
 - project:
     name: software-factory/umurmur-distgit
     templates:
-      - imported-sf-ci-jobs-light
+      - sf-ci-jobs-light
 
 - project:
     name: software-factory/protobuf-c-distgit
     templates:
-      - imported-sf-ci-jobs-light
+      - sf-ci-jobs-light
 
 - project:
     name: software-factory/uthash-distgit
     templates:
-      - imported-sf-ci-jobs-light
+      - sf-ci-jobs-light
 
 - project:
     name: software-factory/yamllint-distgit
     templates:
-      - imported-sf-ci-jobs-light
+      - sf-ci-jobs-light
 
 - project:
     name: software-factory/zookeeper-lite-distgit
     templates:
-      - imported-sf-ci-jobs-light
+      - sf-ci-jobs-light
