--- a/zuul.d/projects.yaml
+++ b/zuul.d/projects.yaml
@@ -17,14 +17,14 @@
 - project:
     name: software-factory/firehooks
     templates:
-      - imported-sf-ci-no-jobs
-      - imported-sf-ci-packages-publish
+      - sf-ci-no-jobs
+      - sf-ci-packages-publish
 
 - project:
     name: software-factory/sf-config
     templates:
-      - imported-sf-ci-jobs
-      - imported-sf-ci-packages-publish
+      - sf-ci-jobs
+      - sf-ci-packages-publish
     check:
       jobs:
         - linters
@@ -38,20 +38,20 @@
 - project:
     name: software-factory/sf-elements
     templates:
-      - imported-sf-ci-no-jobs
-      - imported-sf-ci-packages-publish
+      - sf-ci-no-jobs
+      - sf-ci-packages-publish
 
 - project:
     name: software-factory/sf-release
     templates:
-      - imported-sf-ci-no-jobs
-      - imported-sf-ci-packages-publish
+      - sf-ci-no-jobs
+      - sf-ci-packages-publish
 
 - project:
     name: software-factory/wait4service
     templates:
-      - imported-sf-ci-jobs-light
-      - imported-sf-ci-packages-publish
+      - sf-ci-jobs-light
+      - sf-ci-packages-publish
 
 - project:
     name: www.softwarefactory-project.io
@@ -71,9 +71,9 @@
 - project:
     name: software-factory/managesf
     templates:
-      - imported-sf-ci-jobs
-      - imported-sf-ci-packages-publish
-      - imported-sf-ci-python-jobs
+      - sf-ci-jobs
+      - sf-ci-packages-publish
+      - sf-ci-python-jobs
     check:
       jobs:
         - swagger-lint:
@@ -101,9 +101,9 @@
 - project:
     name: software-factory/pysflib
     templates:
-      - imported-sf-ci-python-jobs
-      - imported-sf-ci-jobs
-      - imported-sf-ci-packages-publish
+      - sf-ci-python-jobs
+      - sf-ci-jobs
+      - sf-ci-packages-publish
     check:
       jobs:
         - sf-rpm-build:
@@ -123,9 +123,9 @@
 - project:
     name: software-factory/cauth
     templates:
-      - imported-sf-ci-python-jobs
-      - imported-sf-ci-jobs
-      - imported-sf-ci-packages-publish
+      - sf-ci-python-jobs
+      - sf-ci-jobs
+      - sf-ci-packages-publish
     check:
       jobs:
         - sf-rpm-build:
@@ -154,29 +154,29 @@
 - project:
     name: software-factory/python-sfmanager
     templates:
-      - imported-sf-ci-python-jobs
-      - imported-sf-ci-jobs
-      - imported-sf-ci-packages-publish
+      - sf-ci-python-jobs
+      - sf-ci-jobs
+      - sf-ci-packages-publish
 
 - project:
     name: software-factory/hydrant
     templates:
-      - imported-sf-ci-python-jobs
-      - imported-sf-ci-jobs-light
-      - imported-sf-ci-packages-publish
+      - sf-ci-python-jobs
+      - sf-ci-jobs-light
+      - sf-ci-packages-publish
 
 - project:
     name: software-factory/ochlero
     templates:
-      - imported-sf-ci-python-jobs
-      - imported-sf-ci-jobs-light
-      - imported-sf-ci-packages-publish
+      - sf-ci-python-jobs
+      - sf-ci-jobs-light
+      - sf-ci-packages-publish
 
 - project:
     name: software-factory/sf-docs
     templates:
-      - imported-sf-ci-no-jobs
-      - imported-sf-ci-packages-publish
+      - sf-ci-no-jobs
+      - sf-ci-packages-publish
     check:
       jobs:
         - sf-docs-build
@@ -184,4 +184,4 @@
 - project:
     name: software-factory/sf-desktop-notifications
     templates:
-      - imported-sf-ci-python-jobs
+      - sf-ci-python-jobs
