Add k1s to the 3.3 repo
Change-Id: I993615b17e946576cbf09357bb71a6319e83d1e2

--- a/sf-3.3.yaml
+++ b/sf-3.3.yaml
@@ -209,6 +209,10 @@ packages:
     spec: included
     scl: rh-python35
 
+  - name: scl/k1s
+    source: external
+    scl: rh-python35
+
   # Nodepool
   - name: scl/diskimage-builder
     source: external
