--- a/sf-3.2.yaml
+++ b/sf-3.2.yaml
@@ -1147,8 +1147,8 @@ baserepos:
     gpgcheck: 1
     kojipriority: 10
 
-  - name: centos-sclo-rh
-    baseurl: http://mirror.centos.org/centos/7/sclo/x86_64/rh/
+  - name: rh-python35-mirror
+    baseurl: https://softwarefactory-project.io/mirrors/rh-python35/
     gpgcheck: 1
     gpgkey: file:///etc/pki/rpm-gpg/RPM-GPG-KEY-CentOS-SIG-SCLo
     kojipriority: 9
