--- a/sf-master.yaml
+++ b/sf-master.yaml
@@ -1287,7 +1287,7 @@ baserepos:
     gpgcheck: 1
     kojipriority: 10
 
-  - name: rh-python35-mirror
+  - name: arh-python35-mirror
     baseurl: https://softwarefactory-project.io/mirrors/rh-python35/
     gpgcheck: 1
     gpgkey: file:///etc/pki/rpm-gpg/RPM-GPG-KEY-CentOS-SIG-SCLo
