--- a/sf-master.yaml
+++ b/sf-master.yaml
@@ -1293,9 +1293,16 @@ baserepos:
     gpgkey: file:///etc/pki/rpm-gpg/RPM-GPG-KEY-CentOS-SIG-SCLo
     kojipriority: 9
 
-extrarepos:
-  - name: openstack-queens
-    baseurl: http://mirror.centos.org/centos/7/cloud/x86_64/openstack-queens/
-    gpgkey: file:///etc/pki/rpm-gpg/RPM-GPG-KEY-CentOS-SIG-Cloud
+  - name: aopenstack-queens
+    baseurl: https://softwarefactory-project.io/mirrors/openstack-queens
     gpgcheck: 1
-    kojipriority: 5
+    gpgkey: file:///etc/pki/rpm-gpg/RPM-GPG-KEY-CentOS-SIG-Cloud
+    kojipriority: 8
+
+  - name: centos-sclo-rh
+    baseurl: http://mirror.centos.org/centos/7/sclo/x86_64/rh/
+    gpgcheck: 1
+    gpgkey: file:///etc/pki/rpm-gpg/RPM-GPG-KEY-CentOS-SIG-SCLo
+    kojipriority: 13
+
+extrarepos: []
