Add sf-rpm-build-and-publish to fast-track the rpms/ project
This change add a new job to build and publish in one shot.

Change-Id: Ib77c8ad5cd4eead1cad41d6a27db0c5643325f0c

--- a/zuul.d/jobs.yaml
+++ b/zuul.d/jobs.yaml
@@ -17,6 +17,20 @@
     parent: sf-rpm-build
 
 - job:
+    name: sf-rpm-build-and-publish
+    description: Build and publish sf rpm to koji
+    pre-run: playbooks/install_requirements.yaml
+    run: playbooks/rpmbuildpublish.yaml
+    required-projects:
+      - software-factory/sfinfo
+    secrets:
+      - sf_koji_configuration
+    nodeset:
+      nodes:
+        - name: mock-host
+          label: cloud-centos-7
+
+- job:
     name: sf-rpm-publish
     description: Publish sf rpm to koji
     pre-run: playbooks/install_requirements.yaml
