Increase rpm build and publish timeout
Change-Id: Icac1270f19900d2d25e90c15d3307f2dd018a663

--- a/zuul.d/jobs.yaml
+++ b/zuul.d/jobs.yaml
@@ -21,6 +21,7 @@
     description: Build and publish sf rpm to koji
     pre-run: playbooks/install_requirements.yaml
     run: playbooks/rpmbuildpublish.yaml
+    timeout: 7200
     required-projects:
       - software-factory/sfinfo
     secrets:
