Add sf-ci-openshift-integration jobs to zuul and nodepool
Change-Id: I7f9a695c36c5ee201c2fb8b7e60dd92045ad3681

--- a/zuul.d/projects-rpms.yaml
+++ b/zuul.d/projects-rpms.yaml
@@ -7,3 +7,21 @@
     gate:
       jobs:
         - sf-rpm-build-and-publish
+
+- project:
+    name: rpms/zuul
+    experimental:
+      jobs:
+        - sf-rpm-build
+        - sf-ci-openshift-integration:
+            dependencies:
+              - sf-rpm-build
+
+- project:
+    name: rpms/nodepool
+    experimental:
+      jobs:
+        - sf-rpm-build
+        - sf-ci-openshift-integration:
+            dependencies:
+              - sf-rpm-build
