Setup jobs-light for twine to get a build in the CI
Change-Id: Idc611b998c0145cc64f8f30ea5ebf621ab19697e

--- a/zuul.d/projects-distgit.yaml
+++ b/zuul.d/projects-distgit.yaml
@@ -598,7 +598,7 @@
 - project:
     name: software-factory/python-twine-distgit
     templates:
-      - sf-ci-no-jobs
+      - sf-ci-jobs-light
 
 - project:
     name: software-factory/python-tqdm-distgit
