Enable sf-ci-jobs template for rpms/zuul rpms/nodepool
Change-Id: I1af2a97d8fe581c53f5d2ed853e9fb96619de8b3

--- a/zuul.d/projects-rpms.yaml
+++ b/zuul.d/projects-rpms.yaml
@@ -10,6 +10,8 @@
 
 - project:
     name: rpms/zuul
+    templates:
+      - sf-ci-jobs
     experimental:
       jobs:
         - sf-rpm-build
@@ -19,6 +21,8 @@
 
 - project:
     name: rpms/nodepool
+    templates:
+      - sf-ci-jobs
     experimental:
       jobs:
         - sf-rpm-build
