--- a/zuul.d/projects-rpms.yaml
+++ b/zuul.d/projects-rpms.yaml
@@ -10,6 +10,7 @@
 
 - project:
     name: rpms/zuul
+    templates: sf-ci-jobs
     experimental:
       jobs:
         - sf-rpm-build
@@ -19,6 +20,7 @@
 
 - project:
     name: rpms/nodepool
+    templates: sf-ci-jobs
     experimental:
       jobs:
         - sf-rpm-build
