Enable rpm build in check for rpms/
Change-Id: Id31760dd66e9576ca72e6b105bae1ec20643e2da

--- a/zuul.d/projects-rpms.yaml
+++ b/zuul.d/projects-rpms.yaml
@@ -3,7 +3,7 @@
     name: ^rpms/.*$
     check:
       jobs:
-        - noop
+        - sf-rpm-build
     gate:
       jobs:
         - sf-rpm-build-and-publish
