sf-config: use fedora pod to run linters with python3
Change-Id: I1418ff3cfaf9a81478d51c0e08fb63eb88c306e2

--- a/zuul.d/projects.yaml
+++ b/zuul.d/projects.yaml
@@ -27,7 +27,8 @@
       - sf-ci-packages-publish
     check:
       jobs:
-        - linters
+        - linters:
+            nodeset: fedora-latest-pod
     experimental:
       jobs:
         - sf-rpm-build
