cauth: the spec is now included
The other package are providing the specfile, let's do that for cauth too.

Change-Id: I36618f778b0241c61f811157a7c6bdd89d89c1ac

--- a/sf-master.yaml
+++ b/sf-master.yaml
@@ -33,7 +33,7 @@ packages:
 
   - name: software-factory/cauth
     source: internal
-    distgit: software-factory/cauth-distgit
+    spec: included
 
   - name: software-factory/sf-web-assets
     source: external
