Add noop jobs to the sf/sf project
The sf/sf project doesn't include any configuration, let's configure
noop automation here.

Change-Id: I13bd59750c6a7ee90d887770453e602271b16332

--- a/zuul.d/projects.yaml
+++ b/zuul.d/projects.yaml
@@ -9,6 +9,15 @@
         - linters
 
 - project:
+    name: software-factory/software-factory
+    check:
+      jobs:
+        - noop
+    gate:
+      jobs:
+        - noop
+
+- project:
     name: logreduce
     release:
       jobs:
