--- a/sf-master.yaml
+++ b/sf-master.yaml
@@ -1178,6 +1178,8 @@ packages:
     source: external
   - name: software-factory/python-log2gearman
     source: external
+  - name: software-factory/python-zmq
+    source: external
 
   # cauth depends
   - name: software-factory/python-oic
