--- a/zuul.d/projects-distgit.yaml
+++ b/zuul.d/projects-distgit.yaml
@@ -51,6 +51,11 @@
       - sf-ci-no-jobs
 
 - project:
+    name: software-factory/python-zmq-distgit
+    templates:
+      - sf-ci-no-jobs
+
+- project:
     name: software-factory/re2-distgit
     templates:
       - sf-ci-no-jobs
