Add sf-ci to zuul-executor projects
Change-Id: I358561e756e6495e6b2626bf73ee66c01d38bfce

--- a/zuul.d/projects-rpms.yaml
+++ b/zuul.d/projects-rpms.yaml
@@ -9,7 +9,7 @@
         - sf-rpm-build-and-publish
 
 - project:
-    name: rpms/zuul
+    name: ^rpms/zuul.*$
     templates:
       - sf-ci-jobs
     experimental:
