add python2-zmq package (for rhel deployment
Change-Id: I11270651c2e548345853b96b04582c9c83f2fbba

--- a/sf-master.yaml
+++ b/sf-master.yaml
@@ -181,6 +181,8 @@ packages:
     source: external
   - name: software-factory/python-paho-mqtt
     source: external
+  - name: software-factory/python-zmq
+    source: external
 
   # Epel import
   - name: software-factory/acme-tiny
