add zeromq and libsodium
Change-Id: Ieeb00333b9cf195cc8524f02e7cafaad81728f69

--- a/sf-master.yaml
+++ b/sf-master.yaml
@@ -197,6 +197,10 @@ packages:
     source: external
   - name: rpms/web-assets
     source: external
+  - name: rpms/zeromq
+    source: external
+  - name: rpms/libsodium
+    source: external
   - name: rpms/python-setuptools
     source: external
   - name: rpms/python-Cython
