Install centos-release-openstack-stein
Since it is installed by SF, its dependencies should be available when
building SF RPMs.

Change-Id: I7068f7e6304b8b353d35047abb7e18ecdaad3437

--- a/playbooks/install_requirements.yaml
+++ b/playbooks/install_requirements.yaml
@@ -15,6 +15,7 @@
               - python2-koji
               - rpm-build
               - rpmdevtools
+              - centos-release-openstack-stein
 
         - name: Add ci users in mock group
           user:
