--- a/sf-master.yaml
+++ b/sf-master.yaml
@@ -736,6 +736,8 @@ packages:
     source: external
   - name: rpms/python-terminaltables
     source: external
+  - name: rpms/yaml-cpp
+    source: external
 
 chrootpackages: "@buildsys-build buildsys-macros-el7 python-rpm-macros make gcc shadow-utils rpm-build python2-devel openstack-macros scl-utils-build rh-python35 rh-python35-build rh-python35-runtime python3 python3-devel"
 
