Activate sf-ci-jobs-light for all rpms project
Change-Id: I4bcecdc6201598cf9cd5d1907440878965782e40

--- a/zuul.d/projects-rpms.yaml
+++ b/zuul.d/projects-rpms.yaml
@@ -1,12 +1,8 @@
 ---
 - project:
     name: ^rpms/.*$
-    check:
-      jobs:
-        - sf-rpm-build
-    gate:
-      jobs:
-        - sf-rpm-build-and-publish
+    templates:
+      - sf-ci-jobs-light
 
 - project:
     name: ^rpms/zuul.*$
