--- a/sf-master.yaml
+++ b/sf-master.yaml
@@ -35,6 +35,10 @@ packages:
     source: internal
     spec: included
 
+  - name: software-factory/firehooks
+    source: internal
+    spec: included
+
   - name: software-factory/sf-web-assets
     source: external
 
