rpms: add missing publish template
This change adds a missing template to manage rpm publication.

Change-Id: Iee9042a30853aa97dd24d6f17db1f995af9a2ed7

--- a/zuul.d/projects-rpms.yaml
+++ b/zuul.d/projects-rpms.yaml
@@ -3,11 +3,13 @@
     name: ^rpms/.*$
     templates:
       - sf-ci-jobs-light
+      - sf-ci-packages-publish
 
 - project:
     name: ^rpms/zuul.*$
     templates:
       - sf-ci-jobs
+      - sf-ci-packages-publish
     experimental:
       jobs:
         - sf-rpm-build
@@ -19,6 +21,7 @@
     name: rpms/nodepool
     templates:
       - sf-ci-jobs
+      - sf-ci-packages-publish
     experimental:
       jobs:
         - sf-rpm-build
