Remove scl python build deps for mock config
Change-Id: Icfed8fac3e56703ce39fa78548845e56ab906ff3

--- a/sf-master.yaml
+++ b/sf-master.yaml
@@ -743,7 +743,7 @@ packages:
   - name: rpms/yaml-cpp
     source: external
 
-chrootpackages: "@buildsys-build buildsys-macros-el7 python-rpm-macros make gcc shadow-utils rpm-build python2-devel openstack-macros scl-utils-build rh-python35 rh-python35-build rh-python35-runtime python3 python3-devel"
+chrootpackages: "@buildsys-build buildsys-macros-el7 python-rpm-macros make gcc shadow-utils rpm-build python2-devel openstack-macros python3 python3-devel"
 
 baserepos:
   - name: centos7-os
