--- a/sf-master.yaml
+++ b/sf-master.yaml
@@ -502,6 +502,8 @@ packages:
     source: external
   - name: rpms/zuul-executor-ansible-28
     source: external
+  - name: rpms/zuul-executor-ansible-29
+    source: external
   - name: rpms/python-dulwich
     source: external
   - name: rpms/python-reno
@@ -741,6 +743,14 @@ packages:
   - name: rpms/python-terminaltables
     source: external
   - name: rpms/yaml-cpp
+    source: external
+  - name: rpms/python-devnest
+    source: external
+  - name: rpms/python-google-api-python-client
+    source: external
+  - name: rpms/python-google-auth-httplib2
+    source: external
+  - name: rpms/python-psycopg2
     source: external
 
 chrootpackages: "@buildsys-build buildsys-macros-el7 python-rpm-macros make gcc shadow-utils rpm-build python2-devel openstack-macros python3 python3-devel"
