Set sf-docs-build to use pod-python-f32
Change-Id: Ic6bd6fadcf65d626c8533f7e7590393bbb15dc83

--- a/zuul.d/jobs.yaml
+++ b/zuul.d/jobs.yaml
@@ -84,3 +84,7 @@
     run: playbooks/sfdocbuild.yaml
     post-run: playbooks/sfdocpublish.yaml
     success-url: 'docs-html/index.html'
+    nodeset:
+      nodes:
+        - name: container
+          label: pod-python-f32
