--- a/playbooks/sfdocbuild.yaml
+++ b/playbooks/sfdocbuild.yaml
@@ -1,7 +1,11 @@
 ---
 - hosts: all
   tasks:
+    - name: Ensure zuul-output directory exits
+      file:
+        path: "{{ ansible_user_dir }}/zuul-output/logs"
+        state: directory
     - name: "Run sphinx-build"
-      command: sphinx-build -W -b html -d build/doctrees docs/ docs-html/
+      command: sphinx-build -W -b html -d build/doctrees docs/ {{ ansible_user_dir }}/zuul-output/logs/docs-html/
       args:
         chdir: "{{ zuul.project.src_dir }}"
