--- a/playbooks/sfdocbuild.yaml
+++ b/playbooks/sfdocbuild.yaml
@@ -2,6 +2,6 @@
 - hosts: all
   tasks:
     - name: "Run sphinx-build"
-      command: sphinx-build -W -b html -d build/doctrees docs/ docs-html/
+      command: sphinx-build -W -b html -d build/doctrees docs/ {{ ansible_user_dir }}/zuul-output/logs/docs-html/
       args:
         chdir: "{{ zuul.project.src_dir }}"
