--- a/sfinfo.cabal
+++ b/sfinfo.cabal
@@ -17,6 +17,10 @@ tested-with:         GHC == 8.6.5
 
 common common-options
   build-depends:       base
+                     , turtle
+                     , network-uri
+                     , text
+                     , random
 
   ghc-options:         -Wall
                        -Wcompat
@@ -24,6 +28,8 @@ common common-options
                        -Wincomplete-uni-patterns
                        -Wincomplete-record-updates
                        -Wredundant-constraints
+                       -- Let's keep unused imports around as documentation purpose
+                       -Wno-unused-imports
   if impl(ghc >= 8.2)
     ghc-options:       -fhide-source-paths
   if impl(ghc >= 8.4)
@@ -34,6 +40,9 @@ common common-options
   if impl(ghc >= 8.10)
     ghc-options:       -Wunused-packages
 
+  default-extensions:  NamedFieldPuns
+                     , OverloadedStrings
+                     , RecordWildCards
   default-language:    Haskell2010
 
 library
@@ -56,6 +65,7 @@ test-suite sfinfo-test
   hs-source-dirs:      test
   main-is:             Spec.hs
   build-depends:       sfinfo
+                     , doctest
   ghc-options:         -threaded
                        -rtsopts
                        -with-rtsopts=-N
