Add podman-haskell to required-projects
The library will be used to run command in sf containers.

Change-Id: Iea0f0c44e007569e676f56c516bc4e6e4e7c89c4

--- a/zuul.d/projects.yaml
+++ b/zuul.d/projects.yaml
@@ -13,6 +13,7 @@
                   label: pod-haskell-lts-16
             required-projects:
               - software-factory/gerrit-haskell
+              - software-factory/podman-haskell
         - hlint:
             nodeset:
               nodes:
