--- a/sfinfo.cabal
+++ b/sfinfo.cabal
@@ -24,7 +24,9 @@ common common-options
                      , directory
                      , time
                      , gerrit-haskell
+                     , podman
                      , cryptonite
+                     , simple-cmd
 
   ghc-options:         -Wall
                        -Wcompat
@@ -39,14 +41,13 @@ common common-options
   if impl(ghc >= 8.4)
     ghc-options:       -Wmissing-export-lists
                        -Wpartial-fields
-  if impl(ghc >= 8.8)
-    ghc-options:       -Wmissing-deriving-strategies
   if impl(ghc >= 8.10)
     ghc-options:       -Wunused-packages
 
   default-extensions:  NamedFieldPuns
                      , OverloadedStrings
                      , RecordWildCards
+                     , LambdaCase
   default-language:    Haskell2010
 
 library
@@ -54,6 +55,7 @@ library
   hs-source-dirs:      src
   exposed-modules:     Sfinfo
                      , Sfinfo.Cloner
+                     , Sfinfo.PipNames
                      , Sfinfo.RpmSpec
 
 executable sfinfo
