Improve the documentation and import location
Depends-On: https://softwarefactory-project.io/r/18951
Change-Id: I5321621322bd0b0560c4dd7154a83e7ab684949b

--- a/sfinfo.cabal
+++ b/sfinfo.cabal
@@ -23,10 +23,11 @@ common common-options
                      , random
                      , directory
                      , time
-                     , gerrit-haskell
-                     , podman
                      , cryptonite
                      , simple-cmd
+                     -- Internal dep
+                     , gerrit
+                     , podman
 
   ghc-options:         -Wall
                        -Wcompat
